test : 인증/인가 테스트
* refactor: DTO 검증 강화

* test: 로그인/로그아웃 및 AI 서비스 테스트

* test: 시큐리티 테스트 의존성 추가 및 테스트

* test: 루틴 및 운동기록 API 테스트

* test:인증 관련 추가 테스트

* fix: get 대신 getFirst 사용